ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata: 
  name: ingress
  namespace: nginx
spec:
  ingressClassName: nginx

  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-service
            port:
              number: 8080
      
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: landing-page
            port:
              number: 8080
